# orderbot_v2

./: .gitignore  Dockerfile.django  Dockerfile.react  Dockerfile.webhook  check_working.py  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  update_ngrok_url.py  webhook-server.py
accounts/: serializers.py  urls.py  views.py
chain/: 240518_2.ipynb  240521_4.ipynb  chains.py  helpers.py  langgraph_assistants.py  langgraph_graphs.py  langgraph_states.py  langgraph_tools.py  langgraph_utilities.py  parsers.py  prompts.py  routes.py  tools.py
chat/: consumers copy.py  consumers.py  consumers_240507.py  consumers_240522.py  consumers_240620.py  middleware.py  routing.py  urls.py  user_event_handlers.py  utilities.py  views.py
frontend-react-version/: index.html  package-lock.json  package.json
nginx/: default.conf
notebook/: 240509.ipynb  240510_2.ipynb  240510_3.ipynb  240511.ipynb  240513.ipynb  240513_2.ipynb  240513_3.ipynb  240514._2.ipynb  240514.ipynb  240514_2.ipynb  240514_3.ipynb  240514_4.ipynb  240514_5.ipynb  240515.ipynb  240515_2.ipynb  240516.ipynb  240516_2.ipynb  240516_3.ipynb  240516_4.ipynb  240516_5.ipynb  240516_6.ipynb  240517.ipynb  240517_2.ipynb  240517_3.ipynb  240517_4.ipynb  240518.ipynb  240521.ipynb  240521_2.ipynb  240521_3.ipynb  240522.ipynb  240524.ipynb  240524_2.ipynb  240622.ipynb  240624.ipynb  240710.ipynb  240710_2.ipynb  240712.ipynb  240713.ipynb  240713_2.ipynb  240719.ipynb  (+11 more)
orderbot/: asgi.py  db.sqlite3  gunicorn.conf.py  manage.py  settings.py  urls.py  wsgi.py
products/: admin.py  models.py  (+1 more)
(+86 files in other folders)
