[tool.poetry]
name = "orderbot"
version = "0.1.0"
description = ""
authors = ["nadle"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.5"
django = "^5.1"
django-environ = "^0.11.2"
langgraph = "^0.2.3"
channels = "^4.1.0"
langchain-openai = "^0.1.20"
langgraph-checkpoint-sqlite = "^1.0.0"
daphne = "^4.1.2"
python-dotenv = "^1.0.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
django-cors-headers = "^4.4.0"
whitenoise = "^6.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
